Bug fixes and memory enhancements